--- a/css/styles.css
+++ b/css/styles.css
@@ -121,7 +121,8 @@ header {
 }
 
 .advantages {
-    margin-bottom: 94px; 
+    padding-top: 94px;
+    padding-bottom: 94px; 
 }
 
 .advantages-hidden-title {
@@ -157,7 +158,7 @@ header {
 
 /* чем занимается студия */
 .work {
-    margin-bottom: 94px;
+    padding-bottom: 94px;
 }
 
 .work-list {
@@ -181,6 +182,13 @@ display: block;
     display: flex;
     justify-content: space-between;
 }
+
+.staff-item {
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+    background-color: var(--primary-white-color);
+}
+
 .staff-photo {
     display: block;
 }
@@ -212,16 +220,15 @@ display: block;
     text-align: center;
 }
 
-.hero .hero-title {
+.hero-title {
     color: var(--primary-white-color);
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
     text-transform: uppercase;
 
-    margin-top: 0;
+    margin-top: 0px;
     margin-bottom: 30px;
-
 }
 
 /* button */
@@ -230,7 +237,7 @@ display: block;
     text-decoration: none;
 
     border-radius: 4px;
-    border: 1px solid transparent;
+    /* border: 1px solid transparent; */
 }
 
 .button.primary {
@@ -243,6 +250,7 @@ display: block;
     display: inline-block;
     padding: 10px 32px;
     min-width: 200px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     /* text-align: center; */
 }
 
@@ -253,15 +261,18 @@ display: block;
     line-height: 1.62;
     letter-spacing: 0.03em;
     font-family: inherit;
-
+    
     padding: 6px 22px;
+    border-width: 0px;
 }
 
 .button.secondary:hover,
 .button.secondary:focus {
     background-color: var(--accent-color);
     color: var(--primary-white-color);
-    
+    outline: none;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /* footer */
@@ -269,21 +280,35 @@ display: block;
     background-color: var(--bg-color);;
     color: var(--primary-white-color);
     line-height: 1.71;
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 
 address {
     font-style: normal;
+
+    margin-top: 20px;
 }
 
 .footer .logo {
     color: var(--primary-white-color);
 }
 
-.footer .link {
+.street 
+{
+    margin-top: 0px;
+    margin-bottom: 9px;
+}
+.mail,
+.tel {
     color: rgba(255, 255, 255, 0.6);
     text-decoration: none;
 
     display: block;
+}
+
+.mail {
+    margin-bottom: 9px;
 }
 
 /* стилизация секции galary на стр портфолио */
