--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
     --primary-black-color: #000000;
     --secondary-bg-color: #F5F4FA;
     --bg-color: #2F303A;
+    --border-color: #eeeeee;
 }
 
 /* html {
@@ -31,6 +32,25 @@ ul {
 
     margin: 0%;
     padding: 0%;
+}
+
+/* убираем отступы у картинок */
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+/* делаем невидимой часть */
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
 
 /* стилизация логотипа в хедере*/
@@ -125,11 +145,6 @@ header {
     padding-bottom: 94px; 
 }
 
-.advantages-hidden-title {
-    margin-top: 0px;
-    margin-bottom: 0px;
-}
-
 .advantages-list .item {
     width: 270px;
 }
@@ -166,10 +181,6 @@ header {
     justify-content: space-between;
 }
 
-.work-photo {
-display: block;
-}
-
 /* секция команды */
 .staff {
     background-color: var(--secondary-bg-color);
@@ -187,10 +198,6 @@ display: block;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
     background-color: var(--primary-white-color);
-}
-
-.staff-photo {
-    display: block;
 }
 
 .name {
@@ -314,8 +321,50 @@ address {
 /* стилизация секции galary на стр портфолио */
 
 .galary {
-    margin-top: 0px;
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
+.filter {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+    /* margin-bottom: 34px; */
+ }
+
+.filter-item {
+    margin-right: 8px;
+    /* margin-bottom: 16px; */
+}
+
+.filter-item:last-child {
+    margin-right: 0px;
+}
+   
+.galary-list {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.card {
+    /* background-color: var(--primary-white-color); */
+    width: 370px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+}
+
+.card:nth-child(3n) {
+    margin-right: 0px;
+}
+
+.card:nth-last-child(-n+3) {
     margin-bottom: 0px;
+}
+
+.card-content {
+    border: 1px solid var(--border-color);
+    border-top: none;
+    padding: 20px 24px;
 }
 
 .galary-title {
@@ -324,11 +373,16 @@ address {
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
+
+    margin-top: 0px;
+    margin-bottom: 4px;
 }
 
 .galary-text {
     font-size: 16px;
     line-height: 1.87;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 
 .galary-link {
@@ -340,5 +394,7 @@ address {
     width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
     outline: 2px solid tomato;
 }    
