--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,15 @@ img {
     overflow: hidden;
 }
 
+/* делаем контейнер */
+.container {
+    width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+} 
+
 /* стилизация логотипа в хедере*/
 .logo {
     color: var(--primary-black-color);
@@ -149,10 +158,6 @@ header {
     width: 270px;
 }
 
-/* .advantages-list .item:not(:last-child) {
-    margin-right: 30px;
-} */
-
 .advantages-title {
     color: var(--title-text-color);
     font-weight: 700;
@@ -198,17 +203,17 @@ header {
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
     background-color: var(--primary-white-color);
+    text-align: center;
 }
 
 .name {
     color: var(--title-text-color);
     font-weight: 500;
     font-size: 16px;
-    line-height: 1.19px;
+    line-height: 1.19;
 
     margin-top: 30px;
     margin-bottom: 10px;
-    text-align: center;
 }
 
 .profession {
@@ -217,7 +222,6 @@ header {
 
     margin-top: 0px;
     margin-bottom: 30px;
-    text-align: center;
 }
 
 /* стилицация героя */
@@ -244,7 +248,6 @@ header {
     text-decoration: none;
 
     border-radius: 4px;
-    /* border: 1px solid transparent; */
 }
 
 .button.primary {
@@ -258,7 +261,6 @@ header {
     padding: 10px 32px;
     min-width: 200px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    /* text-align: center; */
 }
 
 .button.secondary {
@@ -293,12 +295,12 @@ header {
 
 address {
     font-style: normal;
-
-    margin-top: 20px;
 }
 
 .footer .logo {
     color: var(--primary-white-color);
+    display: block;
+    margin-bottom: 20px;
 }
 
 .street 
@@ -329,16 +331,10 @@ address {
     display: flex;
     justify-content: center;
     margin-bottom: 50px;
-    /* margin-bottom: 34px; */
  }
 
-.filter-item {
+.filter-item:not(:last-child) {
     margin-right: 8px;
-    /* margin-bottom: 16px; */
-}
-
-.filter-item:last-child {
-    margin-right: 0px;
 }
    
 .galary-list {
@@ -347,7 +343,6 @@ address {
 }
 
 .card {
-    /* background-color: var(--primary-white-color); */
     width: 370px;
     margin-right: 30px;
     margin-bottom: 30px;
@@ -388,13 +383,4 @@ address {
 .galary-link {
     text-decoration: none;
     color: currentColor;
-}
-
-.container {
-    width: 1200px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
-    outline: 2px solid tomato;
-}    
+}   
