--- a/css/styles.css
+++ b/css/styles.css
@@ -144,18 +144,29 @@ header {
 }
 
 /* секция преимуществ */
-.advantages-list {
-    display: flex;
-    justify-content: space-between;
-}
-
 .advantages {
     padding-top: 94px;
     padding-bottom: 94px; 
 }
 
-.advantages-list .item {
+.advantages-list {
+    display: flex;
+    /* justify-content: space-between; */
+    flex-wrap: wrap;
+}
+
+.advantages-item {
     width: 270px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+}
+
+.advantages-item:nth-child(4n) {
+    margin-right: 0px;
+}
+
+.advantages-item:nth-last-child(-n+4) {
+    margin-bottom: 0px;
 }
 
 .advantages-title {
@@ -183,7 +194,21 @@ header {
 
 .work-list {
     display:flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.work-item {
+    width: 370px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+}
+
+.work-item:nth-child(3n) {
+    margin-right: 0px;
+}
+
+.work-item:nth-last-child(-n+3) {
+    margin-bottom: 0px;
 }
 
 /* секция команды */
@@ -196,14 +221,29 @@ header {
 
 .staff-list {
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .staff-item {
+    width: 270px;
+    margin-right: 30px;
+    margin-bottom: 30px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
     background-color: var(--primary-white-color);
     text-align: center;
+}
+
+.staff-item:nth-child(4n) {
+    margin-right: 0px;
+}
+
+.staff-item:nth-last-child(-n+4) {
+    margin-bottom: 0px;
+}
+
+.staff-content {
+    padding: 30px 32px;
 }
 
 .name {
@@ -211,8 +251,7 @@ header {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
-
-    margin-top: 30px;
+    margin-top: 0px;
     margin-bottom: 10px;
 }
 
@@ -221,7 +260,7 @@ header {
     line-height: 1.19;
 
     margin-top: 0px;
-    margin-bottom: 30px;
+    margin-bottom: 0px;
 }
 
 /* стилицация героя */
@@ -229,6 +268,8 @@ header {
     background-color: var(--bg-color);
     letter-spacing: 0.06em;
     text-align: center;
+    padding-top: 200px;
+    padding-bottom: 200px;
 }
 
 .hero-title {
@@ -325,6 +366,7 @@ address {
 .galary {
     padding-top: 94px;
     padding-bottom: 94px;
+    border-top: 1px solid #ECECEC;
 }
 
 .filter {
